<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UST Activity Spot</string>
    <string name="textView">COLLEGES AND FACULTY</string>
    <string name="arch">College of Architecture</string>
    <string name="educ">College of Education</string>
    <string name="nurse">College of Nursing</string>
    <string name="sci">College of Science</string>
    <string name="music">Conservatory of Music</string>
    <string name="eng">Faculty of Engineering</string>
    <string name="account">AMV College of Accountancy</string>
    <string name="commerce">College of Commerce and Business Administration</string>
    <string name="cfad">College of Fine Arts and Design</string>
    <string name="ab">Faculty of Arts and Letters</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_arch">College of Architecture</string>
    <string name="textView1">Beato Angelico Building</string>
    <string name="actspot1">Pavilion</string>
    <string name="title_activity_educ">College of Education</string>
    <string name="textView2">Albertus Magnus Building</string>
    <string name="actspot2">Auditorium</string>
    <string name="title_activity_nurse">College of Nursing</string>
    <string name="textView3">St. Martin de Porres Building</string>
    <string name="actspot3">UST Medicine Auditorium</string>
    <string name="title_activity_science">College of Science</string>
    <string name="textView4">UST Main Building</string>
    <string name="actspot4">Benavides Park</string>
    <string name="title_activity_music">Conservatory of Music</string>
    <string name="textView5">Albertus Magnus Building</string>
    <string name="actspot5">Pavilion</string>
    <string name="title_activity_engg">Faculty of Engineering</string>
    <string name="textView6">Roque Ruaño Building</string>
    <string name="actspot6">Conference Hall</string>
    <string name="title_activity_account">AMV College of Accountancy</string>
    <string name="textView7">Alfredo M. Velayo Building</string>
    <string name="actspot7">Benavides Park</string>
    <string name="title_activity_commerce">College of Commerce and Business Administration</string>
    <string name="textView8">St. Raymund de Peñafort Building</string>
    <string name="actspot8">Quadricentennial Park</string>
    <string name="title_activity_cfad">College of Fine Arts and Design</string>
    <string name="textView9">Beato Angelico Building</string>
    <string name="actspot9">Pavilion</string>
    <string name="title_activity_ab">Faculty of Arts and Letters</string>
    <string name="textView10">St. Raymund de Peñafort Building</string>
    <string name="actspot10">Quadricentennial Park</string>
    <string name="title_activity_last__ab">Faculty of Arts and Letters</string>
    <string name="act10">Possible Activities:</string>
    <string name="res10">Resources:</string>
    <string name="dd10">Dos and Donts:</string>
    <string name="cap10">Capacity:</string>
    <string name="title_activity_last__account">AMV College of Accountancy</string>
    <string name="act7">Possible Activities:</string>
    <string name="res7">Resources:</string>
    <string name="dd7">Dos and Donts:</string>
    <string name="cap7">Capacity:</string>
    <string name="title_activity_last__arch">College of Architecture</string>
    <string name="act1">Possible Activities:</string>
    <string name="res1">Resources:</string>
    <string name="dd1">Dos and Donts:</string>
    <string name="cap1">Capacity:</string>
    <string name="title_activity_last__educ">College of Education</string>
    <string name="act2">Possible Activities:</string>
    <string name="res2">Resources:</string>
    <string name="dd2">Dos and Donts:</string>
    <string name="cap2">Capacity:</string>
    <string name="title_activity_last__nurse">College of Nursing</string>
    <string name="act3">Possible Activities:</string>
    <string name="res3">Resources:</string>
    <string name="dd3">Dos and Donts:</string>
    <string name="cap3">Capacity:</string>
    <string name="title_activity_last__science">College of Science</string>
    <string name="act4">Possible Activities:</string>
    <string name="res4">Resources:</string>
    <string name="dd4">Dos and Donts:</string>
    <string name="cap4">Capacity:</string>
    <string name="title_activity_last__music">Conservatory of Music</string>
    <string name="act5">Possible Activities:</string>
    <string name="res5">Resources:</string>
    <string name="dd5">Dos and Donts:</string>
    <string name="cap5">Capacity:</string>
    <string name="title_activity_last__engg">Faculty of Engineering</string>
    <string name="act6">Possible Activities:</string>
    <string name="res6">Resources:</string>
    <string name="dd6">Dos and Donts:</string>
    <string name="cap6">Capacity:</string>
    <string name="title_activity_last__commerce">College Commerce and Business Administration</string>
    <string name="act8">Possible Activities:</string>
    <string name="res8">Resources:</string>
    <string name="dd8">Dos and Donts:</string>
    <string name="cap8">Capacity:</string>
    <string name="title_activity_last__cfad">College of Fine Arts and Design</string>
    <string name="act9">Possible Activities:</string>
    <string name="res9">Resources:</string>
    <string name="dd9">Dos and Donts:</string>
    <string name="cap9">Capacity:</string>
    <string name="text1">Places inside and outside the building:</string>
    <string name="text2">Places inside and outside the building:</string>
    <string name="text3">Places inside and outside the building:</string>
    <string name="text4">Places inside and outside the building:</string>
    <string name="text5">Places inside and outside the building:</string>
    <string name="text6">Places inside and outside the building:</string>
    <string name="text7">Places inside and outside the building:</string>
    <string name="text8">Places inside and outside the building:</string>
    <string name="text9">Places inside and outside the building:</string>
    <string name="text10">Places inside and outside the building:</string>

    <string name="des1"></string>
    <string name="des2"></string>
    <string name="des3"></string>
    <string name="des4"></string>
    <string name="des5"></string>
    <string name="des6"></string>
    <string name="des7"></string>
    <string name="des8"></string>
    <string name="des9"></string>
    <string name="des10"></string>


    //park
    <string name="a1">* Dance Practice</string>
    <string name="a2">* Meeting Place</string>
    <string name="a3">* School works</string>
    <string name="a4">* Art Activities</string>

    <string name="re1">* Tables</string>
    <string name="re2">* Chairs</string>
    <string name="re3">* Plugs</string>
    <string name="re4">* Lights</string>

    <string name="d1">* Do not step the grass</string>
    <string name="d2">* No Littering</string>

    <string name="c1">* 8 person per table</string>
    <string name="c2">* more than 10 person in every spot (no tables)</string>

//bena
    <string name="a1.1">* Dance Practice</string>
    <string name="a2.1">* Meeting Place</string>
    <string name="a3.1">* School works</string>
    <string name="a4.1">* Photo Session</string>

    <string name="re1.1">* Chairs</string>
    <string name="re2.1">* Lights</string>

    <string name="d1.1">* Do not step the grass</string>
    <string name="d2.1">* No Littering</string>
    <string name="d3.1">* Avoid Public Display of Affection</string>

    <string name="c1.1">* 8 person per table</string>
    <string name="c2.1">* more than 10 person in every spot (no tables)</string>

//arch
    <string name="a1.2">* Meeting Place</string>
    <string name="a2.2">* School works</string>
    <string name="a3.2">* Art Activities</string>


    <string name="re1.2">* Chairs</string>
    <string name="re2.2">* Tables</string>
    <string name="re3.2">* Lights</string>
    <string name="re4.2">* Plugs</string>

    <string name="d1.2">* No Littering</string>

    <string name="c1.2">* 12 person per table</string>

    //cfad
    <string name="a1.3">* Meeting Place</string>
    <string name="a2.3">* School works</string>
    <string name="a3.3">* Art Activities</string>


    <string name="re1.3">* Chairs</string>
    <string name="re2.3">* Tables</string>
    <string name="re3.3">* Lights</string>
    <string name="re4.3">* Plugs</string>

    <string name="d1.3">* No Littering</string>

    <string name="c1.3">* 12 person per table</string>


    //commerce
    <string name="a1.4">* Dance Practice</string>
    <string name="a2.4">* Meeting Place</string>
    <string name="a3.4">* School works</string>
    <string name="a4.4">* Art Activities</string>

    <string name="re1.4">* Tables</string>
    <string name="re2.4">* Chairs</string>
    <string name="re3.4">* Plugs</string>
    <string name="re4.4">* Lights</string>

    <string name="d1.4">* Do not step the grass</string>
    <string name="d2.4">* No Littering</string>

    <string name="c1.4">* 8 person per table</string>
    <string name="c2.4">* more than 10 person in every spot (no tables)</string>

    //educ
    <string name="a1.5">* Organization Events</string>
    <string name="a2.5">* School Events</string>
    <string name="a3.5">* Seminars</string>
    <string name="a4.5">* Meetings</string>

    <string name="re1.5">* Chairs</string>
    <string name="re2.5">* Plugs</string>
    <string name="re3.5">* Lights</string>
    <string name="re4.5">* Sounds</string>


    <string name="d1.5">* Avoid being noisy</string>
    <string name="d2.5">* No Littering</string>

    <string name="c1.5">* 200 persons</string>

    //eng
    <string name="a1.6">* Organization Events</string>
    <string name="a2.6">* School Events</string>
    <string name="a3.6">* Seminars</string>
    <string name="a4.6">* Meetings</string>

    <string name="re1.6">* Chairs</string>
    <string name="re2.6">* Plugs</string>
    <string name="re3.6">* Lights</string>
    <string name="re4.6">* Sounds</string>


    <string name="d1.6">* Avoid being noisy</string>
    <string name="d2.6">* No Littering</string>

    <string name="c1.6">* 100 persons</string>


    //music
    <string name="a1.7">* Meeting Place</string>
    <string name="a2.7">* School works</string>
    <string name="a3.7">* Art Activities</string>


    <string name="re1.7">* Chairs</string>
    <string name="re2.7">* Tables</string>
    <string name="re3.7">* Lights</string>
    <string name="re4.7">* Plugs</string>

    <string name="d1.7">* No Littering</string>

    <string name="c1.7">* 12 person per table</string>

    //nurse
    <string name="a1.8">* Organization Events</string>
    <string name="a2.8">* School Events</string>
    <string name="a3.8">* Seminars</string>
    <string name="a4.8">* Meetings</string>

    <string name="re1.8">* Chairs</string>
    <string name="re2.8">* Plugs</string>
    <string name="re3.8">* Lights</string>
    <string name="re4.8">* Sounds</string>


    <string name="d1.8">* Avoid being noisy</string>
    <string name="d2.8">* No Littering</string>

    <string name="c1.8">* 200 persons</string>


    //science
    <string name="a1.9">* Dance Practice</string>
    <string name="a2.9">* Meeting Place</string>
    <string name="a3.9">* School works</string>
    <string name="a4.9">* Photo Session</string>

    <string name="re1.9">* Chairs</string>
    <string name="re2.9">* Lights</string>

    <string name="d1.9">* Do not step the grass</string>
    <string name="d2.9">* No Littering</string>
    <string name="d3.9">* Avoid Public Display of Affection</string>

    <string name="c1.9">* 8 person per table</string>
    <string name="c2.9">* more than 10 person in every spot (no tables)</string>


</resources>
