<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.aceraspire.ustapp.last_Ab">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/act10"
        android:id="@+id/act10"
        android:typeface="sans"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/res10"
        android:id="@+id/res10"
        android:typeface="sans"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/a3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dd10"
        android:id="@+id/dd10"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cap10"
        android:id="@+id/cap10"
        android:typeface="sans"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1"
        android:id="@+id/a1"
        android:layout_below="@+id/act10"
        android:layout_alignRight="@+id/dd10"
        android:layout_alignEnd="@+id/dd10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a2"
        android:id="@+id/a2"
        android:layout_below="@+id/a1"
        android:layout_alignLeft="@+id/a1"
        android:layout_alignStart="@+id/a1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a3"
        android:id="@+id/a3"
        android:layout_below="@+id/a2"
        android:layout_alignLeft="@+id/a2"
        android:layout_alignStart="@+id/a2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a4"
        android:id="@+id/a4"
        android:layout_below="@+id/a3"
        android:layout_alignLeft="@+id/a3"
        android:layout_alignStart="@+id/a3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re1"
        android:id="@+id/r1"
        android:layout_below="@+id/res10"
        android:layout_alignLeft="@+id/a4"
        android:layout_alignStart="@+id/a4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/r1"
        android:layout_alignEnd="@+id/r1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re3"
        android:id="@+id/textView3"
        android:layout_below="@+id/r1"
        android:layout_alignLeft="@+id/r1"
        android:layout_alignStart="@+id/r1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re4"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/r1"
        android:layout_alignEnd="@+id/r1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d1"
        android:id="@+id/textView4"
        android:layout_below="@+id/dd10"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d2"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c1"
        android:id="@+id/textView6"
        android:layout_below="@+id/cap10"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c2"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

</RelativeLayout>
